Stopped landing banner text from wrapping. Text now shrinks with screen size. Profile images align center on smaller screens.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 * {
+  justify-content: center;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -9,9 +10,16 @@
 body {
   background-color: #f3f3f3;
 }
+
 h1 {
   text-transform: uppercase;
   margin: 2rem 0;
+}
+
+.brand-logo {
+  text-shadow: 4px 4px 4px #000000;
+  font-size: 1.5rem;
+  color: #ffffff;
 }
 
 .landing-banner {
@@ -34,10 +42,10 @@ h1 {
   float: right;
   margin: 2rem 3rem;
   top: 5%;
-  right: 5%;
+  right: 2%;
   color: white;
-  background: black;
-
+  white-space: nowrap;
+  font-size: 4vw;
   text-transform: uppercase;
   text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
 }
@@ -61,6 +69,7 @@ h1 {
   max-width: 100%;
   height: 362px;
   margin: 2rem;
+  cursor: pointer;
 }
 
 .GalleryImage:hover {
@@ -78,4 +87,9 @@ h1 {
 }
 .card-text {
   font-style: italic;
+}
+
+.gallery-preview-header {
+  font-size: 7vw;
+  overflow-x: visible;
 }
